Fix : button align

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -166,12 +166,13 @@
   }
 
   &--filter {
-
+    height: 100%;
     width: 25.7rem;
     border-radius: .3rem;
     position: relative;
     padding: .829rem 1.7rem;
     border: 0;
+
 
     span {
       font-size: 1.35rem;
